--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: MCLjqt6dZ+GJuOj8G+/lYA
+# Checksum: SfTGKUZQTa0yPIfxzCSI3g
 # Updated: 1 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3067,6 +3067,7 @@ http://affiliates.market-ace.com/
 http://affiliationcash.com/scripts/
 http://affplanet.com/
 http://ajax.1tizer.com/
+http://adm.fwmrm.net/p/discovery_live/
 http://alternads.info/
 http://annonse.
 http://annonser.
