--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: SfTGKUZQTa0yPIfxzCSI3g
-# Updated: 1 Jul 2010
+# Checksum: ERGx1fNpvWRC263lSzAsRQ
+# Updated: 2 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1217,6 +1217,7 @@
 .yourfuckbook.com/
 .yourlayer.de/
 .yumenetworks.com/
+.yudu.com/item/reader_check_intro_ads
 .yzrnur.com/
 .zangocash.com/
 .zazzle.com/utl/getpanel?
