--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: ERGx1fNpvWRC263lSzAsRQ
+# Checksum: JYE0HB2CijrDARyXmadIsg
 # Updated: 2 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2116,6 +2116,7 @@
 /mediaplayer/leaderboard?zone=
 /MetaAdServer/
 /mgid.html
+/mgidw.html
 /middle_adv_
 /miva_ads
 /mnads1.php?
