--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: JYE0HB2CijrDARyXmadIsg
+# Checksum: bW2ht5wGx+MWb6WG4LkWtQ
 # Updated: 2 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1481,6 +1481,7 @@
 /adcolo.com/
 /adcompany
 /adContent.
+/AdController.
 /adcount.
 /adcreative/
 /adcycle.
