http://uk.freshdeals.com/prods/laptop.html

--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -247,6 +247,7 @@
 .freelogs.com/counter/
 .freestat.hu/
 .freestats.com/
+.freshdeals.com/click/pixel.gif?
 .funstage.com/
 .generaltracking.de/
 .geo.yahoo.com/
@@ -380,8 +381,8 @@
 .mm7.net/
 .mmismm.
 .monetate.net/
-.mookie1.com/
 .monitus.net/
+.mookie1.com/
 .mpora.com/tv/player/stats/
 .mpwe.net/
 .msn.com/ro.aspx?
