--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: uaXznr6mD0KfTeBJR49pMg
+# Checksum: Zc6IXP7CMGkn1IlWzhxtZA
 # Updated: 2 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -774,7 +774,7 @@
 .madserver.eu/
 .magna.ru/partner/                                                                               
 .magnet.kiev.ua/
-.magorgeeks.com/images/DOWNLOAD_sd_
+.majorgeeks.com/images/DOWNLOAD_sd_
 .mail.yahoo.com/mc/md.php?
 .majorgeeks.com/aff/
 .majorgeeks.com/images/banners/
