--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Zc6IXP7CMGkn1IlWzhxtZA
-# Updated: 2 Jul 2010
+# Checksum: K5qhP/7BXq33iZ5sq3spgw
+# Updated: 3 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -188,6 +188,8 @@
 .adspace
 .adstogo.
 .adtaily.com/
+.admatik.pl/
+.adtaily.pl/
 .adtech.de/
 .adtechus.
 .adtegrity.net/
