--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Zc6IXP7CMGkn1IlWzhxtZA
-# Updated: 2 Jul 2010
+# Checksum: I8u7ZWLjqsLjUkLE7MnP8w
+# Updated: 3 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -774,10 +774,10 @@
 .madserver.eu/
 .magna.ru/partner/                                                                               
 .magnet.kiev.ua/
-.majorgeeks.com/images/DOWNLOAD_sd_
 .mail.yahoo.com/mc/md.php?
 .majorgeeks.com/aff/
 .majorgeeks.com/images/banners/
+.majorgeeks.com/images/DOWNLOAD_sd_
 .mallcom.
 .mallorcash.
 .match.net/advall.php
@@ -3150,6 +3150,7 @@ http://clicktrace.info/
 http://clickz.lonelycheatingwives.
 http://cluster.adultadworld.
 http://code.popup2m.com/
+http://codytzi.com/images/
 http://complex.com/takeovers/
 http://comunicazio.com/block.js
 http://connect.decknetwork.net/
