--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: +nOwvUGn6cKHxJy9OyKLiQ
-# Updated: 3 Jul 2010
+# Checksum: hFMbUlg4l9VjfxkCWSL5KA
+# Updated: 4 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1702,6 +1702,7 @@
 /advertise
 /advertpro/
 /advfiles/
+/Advertisment/
 /adview.
 /advision
 /advmaker.ru/
