--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: hFMbUlg4l9VjfxkCWSL5KA
+# Checksum: Z/rDQ6JthlJuek5zPjCBJg
 # Updated: 4 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -144,6 +144,7 @@
 .adman.gr/
 .admanage.com/
 .admarketplace.
+.admatik.pl/
 .adme.ru/
 .admeld.com/
 .admeta.
@@ -188,7 +189,6 @@
 .adspace
 .adstogo.
 .adtaily.com/
-.admatik.pl/
 .adtaily.pl/
 .adtech.de/
 .adtechus.
@@ -1700,9 +1700,9 @@
 /advert.php?
 /advert_iframe
 /advertise
+/Advertisment/
 /advertpro/
 /advfiles/
-/Advertisment/
 /adview.
 /advision
 /advmaker.ru/
@@ -1889,6 +1889,7 @@
 /displayads.
 /DNSads.
 /doors/ads/
+/doubleclick/iframe.htm?
 /doubleclick_ads.
 /doubleclickcontainer.aspx?
 /doubleclickloader.
