--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Z/rDQ6JthlJuek5zPjCBJg
+# Checksum: jXqq9wrTpAXXPglCXvd5Qg
 # Updated: 4 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2263,6 +2263,7 @@
 /roturl.js
 /ruby_iframe_
 /rule34/ads/
+/rule34v2/ads/
 /safetrackonline.biz/
 /ScanScoutPlugin.
 /scripts/ad-
