--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: jXqq9wrTpAXXPglCXvd5Qg
+# Checksum: S6K9dSMRZ4+qz6g7TnvDXw
 # Updated: 4 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -206,6 +206,7 @@
 .adultfriendfinder.com/go/
 .adultfriendfinder.com/images/banners/
 .adultfyi.com/images/banners/
+.adventory.com
 .adversalservers.
 .adverserve.
 .adverticum.
