--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: S6K9dSMRZ4+qz6g7TnvDXw
+# Checksum: WVZs9dZngTP9JDU1QFNtWw
 # Updated: 4 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1521,6 +1521,7 @@
 /adinclude
 /adinterax.
 /adisfy.com/
+/adj.php?
 /adjs.php?
 /adjs/iframe
 /adjs_mod
