--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: JIHIOOfpdlqBXkQWjwH2aA
+# Checksum: +OBjW2tp7Tm4xgM0b2Pafw
 # Updated: 4 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2800,6 +2800,7 @@ _iframe_ad_
 _leftx280_
 _minibanner
 _org_ad.
+_popovers_
 _reporting_ads.
 _right_ad.
 _rmadv.
