--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 9/G3nVUvRkgVjHVNr2nwyg
+# Checksum: TR6XHCvXpzYDT7+TWaWqlw
 # Updated: 4 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -145,6 +145,7 @@
 .admanage.com/
 .admarketplace.
 .admatik.pl/
+.admaxserver.com/
 .adme.ru/
 .admeld.com/
 .admeta.
@@ -179,7 +180,6 @@
 .adsdk.com/
 .adserver.
 .adserverplus.
-.admaxserver.com/
 .adservinginternational.
 .adsfactor.net/
 .adshopping.com/view/?
@@ -1580,6 +1580,7 @@
 /ads.pl?
 /ads.w3c.
 /ADS/
+/ads/300x300_
 /ads/a.aspx?
 /ads/acctid
 /ads/ad.
@@ -1923,10 +1924,10 @@
 /feeds/jobroll/?
 /ffadult/featured/external/
 /files/adman/
-/flashads/
 /flash/ads/
 /flash/maildating_
 /flash_advertising/
+/flashads/
 /flashpeelads/
 /fleshlight.com/
 /fleshlightcash_
