re-fix smartadserver

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: ZRJDVoq1jJBJIyQdEdQr0A
+# Checksum: TR6XHCvXpzYDT7+TWaWqlw
 # Updated: 4 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1030,7 +1030,7 @@
 .sixsigmatraffic.
 .slickcash.com/flash/subtitles_
 .slutdrive.com/banner_
-.smartadserver.com/
+.smartadserver.com/diff/
 .smartcontext.pl/
 .smartmovies.net/promo_
 .smarttargetting.
