--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: TR6XHCvXpzYDT7+TWaWqlw
+# Checksum: +6m1aLX1h8DuM0eE4M0sag
 # Updated: 4 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1956,6 +1956,7 @@
 /get_banner.asp?
 /getad.ashx?
 /getad.aspx?
+/getad?zone
 /getad.js
 /getad.php
 /getADDs.aspx?
