--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: +6m1aLX1h8DuM0eE4M0sag
-# Updated: 4 Jul 2010
+# Checksum: XMPTJSlNIT6cz7/ynELi/g
+# Updated: 5 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1146,6 +1146,7 @@
 .uff5.to/
 .ugo.com/takeover/
 .unicast.com/
+.uploadmirrors.com/banner.html
 .upsellit.com/
 .urlcash.net/img/
 .usemax.de/
