--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: XMPTJSlNIT6cz7/ynELi/g
+# Checksum: jDoT/ijQdsWkSd3q/fDxuQ
 # Updated: 5 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1546,6 +1546,7 @@
 /adng.html?
 /adotube_adapter.
 /adpage.htm
+/adpanelcontent.
 /adpeeps
 /ADPictures/
 /adpoint.
