--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: jDoT/ijQdsWkSd3q/fDxuQ
+# Checksum: Sp+1wjLRtLFEqFYyUAcIlg
 # Updated: 5 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1133,6 +1133,7 @@
 .travidia.
 .triadmedianetwork.
 .tribalfusion.
+.tsviewer.com/javascript/popup.js
 .ttzmedia.
 .tube8.com/ad?
 .tubedspots.com/
