--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Sp+1wjLRtLFEqFYyUAcIlg
+# Checksum: 4ZKbgfBnwqg5Lq5aaIji+Q
 # Updated: 5 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2270,6 +2270,7 @@
 /rotation/banner
 /rotationad.
 /roturl.js
+/rss/ads/
 /ruby_iframe_
 /rule34/ads/
 /rule34v2/ads/
