--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 4ZKbgfBnwqg5Lq5aaIji+Q
+# Checksum: 75np+kHN08+o7ZwV95mtmA
 # Updated: 5 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1959,9 +1959,9 @@
 /get_banner.asp?
 /getad.ashx?
 /getad.aspx?
-/getad?zone
 /getad.js
 /getad.php
+/getad?zone
 /getADDs.aspx?
 /getADDs.aspx?
 /getAds-
@@ -3498,6 +3498,8 @@ http://www.p2pnet.net/images/
 http://www.physorg.com/banner/
 http://www.porno-file.ru/uploads/
 http://www.pro-clockers.com/images/banners/
+http://www.proxies2u.com/images/btn/
+http://www.proxyroll.com/proxybanner.
 http://www.rejournal.com/images/banners/
 http://www.rejournal.com/ne/images/homepage
 http://www.rejournal.com/users/Blinks/
