--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 75np+kHN08+o7ZwV95mtmA
+# Checksum: V7Po3rRswGAxk/0RC3niHw
 # Updated: 5 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2785,6 +2785,7 @@ _ads1.asp
 _ads_index_
 _adshow.asp?
 _advert_vert
+_Advertise180.
 _advertisement_
 _assets/ads/
 _banner/
