site: http://www.tsviewer.com/

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: V7Po3rRswGAxk/0RC3niHw
-# Updated: 5 Jul 2010
+# Checksum: /V91vIBY5pq0DVic9y18CQ
+# Updated: 6 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1133,7 +1133,6 @@
 .travidia.
 .triadmedianetwork.
 .tribalfusion.
-.tsviewer.com/javascript/popup.js
 .ttzmedia.
 .tube8.com/ad?
 .tubedspots.com/
