--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: /V91vIBY5pq0DVic9y18CQ
+# Checksum: 062WYJcOUdaSTsLQD3flCw
 # Updated: 6 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2719,6 +2719,8 @@ _540_70.
 _540_70_
 _550x150.
 _555x70.
+_585x75-
+_585x75_
 _590x105.
 _600-90.
 _600x120_
