--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 062WYJcOUdaSTsLQD3flCw
+# Checksum: zIoYA8tPG2oSftBHsAViZQ
 # Updated: 6 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -106,6 +106,7 @@
 .adblade.com/
 .adbrite.com/iads/
 .adbrite.com/mb/
+.adbull.com/
 .adbureau.
 .adcde.com/
 .adcell.de/
@@ -2895,7 +2896,6 @@ http://a.thefreedictionary.
 http://aaa.at4.info/
 http://ad-clicks.com/
 http://ad.336698.cn/
-http://ad.adbull.com/
 http://ad.adriver.ru/
 http://ad.be.doubleclick.net/ad/
 http://ad.blog.
