--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: zIoYA8tPG2oSftBHsAViZQ
+# Checksum: 8Dj0nixBWGvXJoG7T7x15w
 # Updated: 6 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1482,6 +1482,7 @@
 /adchannel_
 /adclick
 /adclixad.
+/adClutter.
 /adcode.
 /adcodes/
 /AdCollector.
