--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 8Dj0nixBWGvXJoG7T7x15w
+# Checksum: 9IG9dUwgkQ0Tf6DkWzpT5w
 # Updated: 6 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -607,6 +607,7 @@
 .getvids.de/ad
 .ggwcash.
 .ghacks.net/skin-background.
+.giantrealm.com/
 .GIF?BannerId
 .gif?BannerId
 .girlsgonewild.com/maintour.
