--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 9IG9dUwgkQ0Tf6DkWzpT5w
+# Checksum: UHtNZXX6nijqFphoyANZlQ
 # Updated: 6 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2952,6 +2952,7 @@ http://adcontent.
 http://addy.wildcammy.com/
 http://adedy.com/
 http://adfile.
+http://adhitzads.com/
 http://adi.
 http://adimg.
 http://adjax.
