--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: UHtNZXX6nijqFphoyANZlQ
-# Updated: 6 Jul 2010
+# Checksum: 6EA936movgUfmleQmm/Dag
+# Updated: 8 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -3396,6 +3396,7 @@ http://rotabanner
 http://rs.mail.ru/
 http://rss.dtiserv.com/
 http://rss2search.com/delivery/
+http://rtq.careerbuilder.com/
 http://ruleclaim.web.
 http://russkoexxx.com/ban/
 http://s.trigami.
