--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 6EA936movgUfmleQmm/Dag
-# Updated: 8 Jul 2010
+# Checksum: LxLDsK5u4eDwCx3RWcHo/w
+# Updated: 7 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1947,6 +1947,7 @@
 /forums/ad/
 /frame_ads_
 /friendfinder_
+/gads.js
 /gafv_adapter.
 /galleries/banners/
 /gam_ad_
