--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: LxLDsK5u4eDwCx3RWcHo/w
+# Checksum: 69NbK60AOnqZ91+YDbELww
 # Updated: 7 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -843,6 +843,7 @@
 .mypicturetown.com/P2PwebCmd
 .n9nedegrees.
 .nabbr.com/
+.naked.com/
 .nangaspace.com/fbad.gif
 .nangaspace.com/images/cc_ad.jpg
 .nasads.com/
@@ -3507,6 +3508,7 @@ http://www.porno-file.ru/uploads/
 http://www.pro-clockers.com/images/banners/
 http://www.proxies2u.com/images/btn/
 http://www.proxyroll.com/proxybanner.
+http://www.realdatechat.com/
 http://www.rejournal.com/images/banners/
 http://www.rejournal.com/ne/images/homepage
 http://www.rejournal.com/users/Blinks/
