--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: LxLDsK5u4eDwCx3RWcHo/w
-# Updated: 7 Jul 2010
+# Checksum: v3Cq3togNuZNis/QSo99GQ
+# Updated: 8 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -786,6 +786,7 @@
 .majorgeeks.com/images/DOWNLOAD_sd_
 .mallcom.
 .mallorcash.
+.marketbanker.com/
 .match.net/advall.php
 .maxcash.com/
 .maxiadv.com/
