--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -83,6 +83,7 @@
 .cbclicks.
 .cbox.ws/box/relay.swf?
 .cedexis.com/
+.cedexis.net/
 .celebros-analytics.
 .center.tv/counter/
 .chart.dk/
@@ -745,6 +746,8 @@
 /c2_count.js
 /c_track.php?
 /callbacks/stats?
+/cdx.gif?
+/cedexisus.
 /cetrk.com/pages/
 /cgi-bin/cnt/
 /cgi-bin/count.pl?
@@ -1438,6 +1441,7 @@ http://c.compete.com/
 http://cashcount.com/
 http://cdn.brightedge.com/brightedge.php?
 http://cetrk.com/
+http://cedexisus.
 http://cf.addthis.com/
 http://cheezburger-analytics.com/
 http://ciwstat.
