--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: v3Cq3togNuZNis/QSo99GQ
+# Checksum: HXJTxpm0KX6GMzDeKHbalQ
 # Updated: 8 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -855,6 +855,7 @@
 .neodatagroup.com/
 .neowin.net/images/adbot_promos/
 .neowin.net/images/atlas/aww3.
+.neoseeker.com/a_pane.php?
 .net/_ads/
 .net/ad-
 .net/adi/
