--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -229,6 +229,7 @@
 .eu-survey.
 .everesttech.net/
 .evri.com/analytics/
+.evolvemediametrics.com/
 .ewebcounter.com/
 .exelator.
 .experts-exchange.com/pageLoaded.jsp?
