--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: HXJTxpm0KX6GMzDeKHbalQ
+# Checksum: kUlOLWq4SdNG8Yg++mdfJQ
 # Updated: 8 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -271,6 +271,7 @@
 .asg.to/ad/
 .ashleymadison.com/flashbanner/
 .askjolene.com/endroll.php?
+.asp?coad
 .assoc-amazon.
 .astrolabio.
 .at.atwola.com/
