--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -228,8 +228,8 @@
 .etracking24.
 .eu-survey.
 .everesttech.net/
-.evri.com/analytics/
 .evolvemediametrics.com/
+.evri.com/analytics/
 .ewebcounter.com/
 .exelator.
 .experts-exchange.com/pageLoaded.jsp?
@@ -727,6 +727,7 @@
 /audience_science
 /awstats_misc_tracker
 /b2bsdc.js
+/baynote.js
 /baynoteObserver/
 /beacon.cgi?
 /beacon.gif?
@@ -1441,9 +1442,9 @@ http://c.bigmir.net/?
 http://c.compete.com/
 http://cashcount.com/
 http://cdn.brightedge.com/brightedge.php?
-http://cetrk.com/
-http://cedexisus.
 http://cedexis-
+http://cedexisus.
+http://cetrk.com/
 http://cf.addthis.com/
 http://cheezburger-analytics.com/
 http://ciwstat.
