cleanup pop6.com

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: kUlOLWq4SdNG8Yg++mdfJQ
+# Checksum: Y/NFolAZe5ZvWbyL/M3OPA
 # Updated: 8 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3181,7 +3181,6 @@ http://comunicazio.com/block.js
 http://connect.decknetwork.net/
 http://content-ads.
 http://content.liveuniverse.
-http://content.pop6.com/
 http://cp.intl.match.com/eng/prm/
 http://creatives.livejasmin.com/iframes/
 http://cts.tradepub.com/
