--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Y/NFolAZe5ZvWbyL/M3OPA
+# Checksum: +1yR7Z2TiTPeZ102F+rzpw
 # Updated: 8 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -208,6 +208,7 @@
 .adultfriendfinder.com/go/
 .adultfriendfinder.com/images/banners/
 .adultfyi.com/images/banners/
+.adultaccessnow.com/
 .adventory.com
 .adversalservers.
 .adverserve.
