--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: LBSJ72Kt7waka8jbsdxOng
-# Updated: 8 Jul 2010
+# Checksum: 0Uab441+B+4TNG6pMG0q5A
+# Updated: 9 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -929,6 +929,7 @@
 .pepperjamnetwork.
 .perfb.com/
 .pgmediaserve.
+.pgpartner.com/
 .pheedo.com/img.phdo?
 .photosupload.net/photosupload.js
 .php?affid=
