--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 0Uab441+B+4TNG6pMG0q5A
+# Checksum: wix9URKE6y8W0GkQYCdrbA
 # Updated: 9 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3337,6 +3337,7 @@ http://odnidoma.com/ban/
 http://openx.
 http://outils.f5biz.
 http://overlay.ringtonematcher.com/overlay/
+http://ox.overclock3d.net/
 http://pagead2.
 http://pan.dogster.com/
 http://partner.googleadservices.com/
