--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: wix9URKE6y8W0GkQYCdrbA
+# Checksum: rNECvPLMnglJTNxDoqckVQ
 # Updated: 9 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2089,6 +2089,7 @@
 /includes/adtags/
 /inline_ad.
 /InlineTextAds?
+/imlive.gif
 /insertAds.
 /iplgadshow
 /j/ads.js
