--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: rNECvPLMnglJTNxDoqckVQ
+# Checksum: oxqNKihQy4E1ML33ug4Tyg
 # Updated: 9 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -521,6 +521,7 @@
 .egghelp.org/images/misc/
 .ehow.com/images/brands/
 .ejb.com/300_
+.elekted.com/
 .eliado.com/banner/
 .elwatan.com/IMG/swf/
 .elyrics.net/inc/ads/
