--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: oxqNKihQy4E1ML33ug4Tyg
+# Checksum: 9VAKuVWFbIB4F5IldWc99Q
 # Updated: 9 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2037,6 +2037,7 @@
 /iframe_ads?
 /iframe_chitika_
 /iframes/adbrite.
+/images/ad.
 /image/ads/
 /image/ads/
 /image/ads_
