--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 9VAKuVWFbIB4F5IldWc99Q
+# Checksum: /AjiUyU1QpHQQqpfFr9ZvA
 # Updated: 9 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1469,6 +1469,7 @@
 /ad_slide
 /ad_square_
 /ad_tag_
+/ad_tags_
 /ad_top_
 /ad_wide_
 /ad_wrapper
