--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: /AjiUyU1QpHQQqpfFr9ZvA
+# Checksum: TlHsNua5aD/gAhWg6GenvQ
 # Updated: 9 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1922,6 +1922,7 @@
 /ept_in.php?
 /eroad.php
 /eroadvertorial
+/ero-ads-
 /esel.js
 /eshopoffer.asp
 /etology.
