--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: TlHsNua5aD/gAhWg6GenvQ
+# Checksum: pYEzXaST4kfQT++gIPfY9A
 # Updated: 9 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1920,9 +1920,9 @@
 /emailads/
 /eporner-banner-
 /ept_in.php?
+/ero-ads-
 /eroad.php
 /eroadvertorial
-/ero-ads-
 /esel.js
 /eshopoffer.asp
 /etology.
@@ -2039,7 +2039,6 @@
 /iframe_ads?
 /iframe_chitika_
 /iframes/adbrite.
-/images/ad.
 /image/ads/
 /image/ads/
 /image/ads_
@@ -2049,6 +2048,7 @@
 /imageads/
 /images.ads.
 /images/336x280
+/images/ad.
 /images/ad/
 /images/ad1.
 /images/ad125
@@ -2084,6 +2084,7 @@
 /img_common/banner_
 /imgad?id=
 /imgs/ad/
+/imlive.gif
 /imp.ads/
 /impopup/
 /include/ad_
@@ -2093,7 +2094,6 @@
 /includes/adtags/
 /inline_ad.
 /InlineTextAds?
-/imlive.gif
 /insertAds.
 /iplgadshow
 /j/ads.js
@@ -3000,6 +3000,7 @@ http://ads.digitalpoint.com/
 http://ads.drugs.com/
 http://ads.e-go.gr/
 http://ads.focus-news.net/
+http://ads.foxnews.com/
 http://ads.gather.com/
 http://ads.glamourbabe.info/
 http://ads.globeandmail.com/
