--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: pYEzXaST4kfQT++gIPfY9A
+# Checksum: if0zdjj7/DA5iYUkmerC9Q
 # Updated: 9 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1850,6 +1850,7 @@
 /BottomAd.
 /bravenet/images/
 /buttonad/
+/buzz/ads/
 /call/pubif/
 /call/pubj/
 /cgi-bin/adcgi
