removed unnessary filter

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: if0zdjj7/DA5iYUkmerC9Q
+# Checksum: Hm/VpZXZGgYUwFTbLkJyqg
 # Updated: 9 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3001,7 +3001,6 @@ http://ads.digitalpoint.com/
 http://ads.drugs.com/
 http://ads.e-go.gr/
 http://ads.focus-news.net/
-http://ads.foxnews.com/
 http://ads.gather.com/
 http://ads.glamourbabe.info/
 http://ads.globeandmail.com/
