--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -254,7 +254,6 @@
 .geo.yahoo.com/
 .geobytes.com/gd?
 .geovisite.com
-.gif?rand=
 .glanceguide.
 .glbdns.microsoft.com/
 .globalviptraffic.
@@ -853,6 +852,7 @@
 /drivingrevenue/dRev.js
 /eae-logger/
 /ecom/status.jsp?
+/ecblank.gif?
 /eluminate?
 /EMERPEventCollector
 /entry-stats.
