--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Hm/VpZXZGgYUwFTbLkJyqg
+# Checksum: 5uOvAwJaY4MaXR9slerOsQ
 # Updated: 9 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2037,6 +2037,7 @@
 /iframe.ad/
 /iframe/ad/
 /iframe/ads/
+/iframe_ad_
 /iframe_ads?
 /iframe_chitika_
 /iframes/adbrite.
