--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -851,8 +851,8 @@
 /drads?referrer=
 /drivingrevenue/dRev.js
 /eae-logger/
-/ecom/status.jsp?
 /ecblank.gif?
+/ecom/status.jsp?
 /eluminate?
 /EMERPEventCollector
 /entry-stats.
@@ -1247,7 +1247,9 @@
 /tracking.jsp?
 /tracking/addview/
 /tracking/clicks
+/tracking/epixels.js
 /tracking/index.
+/tracking/pixels.js
 /tracking/track
 /tracking202/
 /tracking_ajax.html?
