--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 5uOvAwJaY4MaXR9slerOsQ
-# Updated: 9 Jul 2010
+# Checksum: rR7vkDIGL2wMX10zWKk0vQ
+# Updated: 10 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1537,6 +1537,7 @@
 /adjs.php?
 /adjs/iframe
 /adjs_mod
+/adkit/js/
 /adlabel_horz
 /adlayer
 /adlink.gif
