site: http://www.fallout3nexus.com/downloads/download.php?id=69756

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: rR7vkDIGL2wMX10zWKk0vQ
+# Checksum: zWVcccm8jvyA7xP5wkCiVw
 # Updated: 10 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1938,6 +1938,7 @@
 /fc_ads/
 /feeds/jobroll/?
 /ffadult/featured/external/
+/file/ad.
 /files/adman/
 /flash/ads/
 /flash/maildating_
