site: http://www.idontlikeyouinthatway.com/index.html

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: zWVcccm8jvyA7xP5wkCiVw
-# Updated: 10 Jul 2010
+# Checksum: SSxnDbU+1SFDC2VyCNHeRQ
+# Updated: 11 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -655,6 +655,7 @@
 .ideal-sexe.com/
 .idg.com.au/files/skins/
 .idg.com.au/idg/fpromo/
+.idontlikeyouinthatway.com/mg
 .idregie.com/
 .ign.com/advertisers/
 .illimitux.net/js/abp.js
@@ -2147,8 +2148,6 @@
 /mediaplayer/island?zone=
 /mediaplayer/leaderboard?zone=
 /MetaAdServer/
-/mgid.html
-/mgidw.html
 /middle_adv_
 /miva_ads
 /mnads1.php?
