--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: SSxnDbU+1SFDC2VyCNHeRQ
+# Checksum: 3B3VBFV1xTAo0nkAtGO8qw
 # Updated: 11 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1153,6 +1153,7 @@
 .txtswap.
 .ucoz.net/popup/
 .uff5.to/
+.uk/ads/
 .ugo.com/takeover/
 .unicast.com/
 .uploadmirrors.com/banner.html
@@ -3038,6 +3039,7 @@ http://ads.rttnews.com/
 http://ads.rudester.com/
 http://ads.ruralpress.com/
 http://ads.scribefire.com/
+http://ads.netcommunities.com/
 http://ads.sexier.com/
 http://ads.sexinyourcity.com/
 http://ads.shoppingads.com/
