--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 3B3VBFV1xTAo0nkAtGO8qw
+# Checksum: BoNST4qvXSCZk1ecUTYNqw
 # Updated: 11 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -922,6 +922,7 @@
 .p-digital-server.
 .paid-to-promote.net/
 .panachetech.
+.partypoker.com/hp_landing
 .paperg.com/
 .partnercash.de/
 .pcpro.co.uk/images/skins/
@@ -1060,6 +1061,7 @@
 .sponsor4cash.de/script/
 .sponsorpagos.
 .sponsorselect.
+.sponsorads.
 .spottt.com/
 .spunkycash.
 .sterrencash.
@@ -3040,6 +3042,7 @@ http://ads.rudester.com/
 http://ads.ruralpress.com/
 http://ads.scribefire.com/
 http://ads.netcommunities.com/
+http://ads.raidrush.org/
 http://ads.sexier.com/
 http://ads.sexinyourcity.com/
 http://ads.shoppingads.com/
