--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: BoNST4qvXSCZk1ecUTYNqw
+# Checksum: J9viyeDbPiblAb4uhqsWNg
 # Updated: 11 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1710,6 +1710,7 @@
 /adtomo/www/
 /adtrack
 /adunit.
+/adunitt
 /adv.asp?
 /adv.aspx?
 /adv/adv_
