--- a/easylistfanboy/iron/adblock-chn.ini
+++ b/easylistfanboy/iron/adblock-chn.ini
@@ -106,6 +106,7 @@
 .tudou.com/cptadvcontrol/
 .tw/tserver/
 .unionsky.cn/
+.verystat.com/
 .wauee.com/kaokaoni/
 .wdjl.net/ad
 .west263.com/vcp/vcp_img/
@@ -270,6 +271,7 @@ http://stadig.ifeng.com/
 http://stat.tudou.com/
 http://stat.wauee.com/
 http://stat.zol.com.
+http://total.xinmin.cn/
 http://trace.qq.com/
 http://tw.analysis.
 http://unionpic.boodvd.cn/ad/
