--- a/easylistfanboy/iron/adblock-chn.ini
+++ b/easylistfanboy/iron/adblock-chn.ini
@@ -65,6 +65,7 @@
 .hkheadline.com/promo/images/
 .hkheadline.com/promo/rp_images/
 .hkheadline.com/rpromo/
+.hinews.cn/out/
 .hz0752.com/a/
 .icast.cn/
 .instrument.com.cn/g/
