--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: J9viyeDbPiblAb4uhqsWNg
+# Checksum: pwsn0HpY1DiEz3s/Jwc1GQ
 # Updated: 11 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -922,9 +922,9 @@
 .p-digital-server.
 .paid-to-promote.net/
 .panachetech.
-.partypoker.com/hp_landing
 .paperg.com/
 .partnercash.de/
+.partypoker.com/hp_landing
 .pcpro.co.uk/images/skins/
 .pcr-online.biz/static/banners/
 .peakclick.com/
@@ -1059,9 +1059,9 @@
 .spiderhood.net/
 .spinbox.net/
 .sponsor4cash.de/script/
+.sponsorads.
 .sponsorpagos.
 .sponsorselect.
-.sponsorads.
 .spottt.com/
 .spunkycash.
 .sterrencash.
@@ -1155,8 +1155,8 @@
 .txtswap.
 .ucoz.net/popup/
 .uff5.to/
-.uk/ads/
 .ugo.com/takeover/
+.uk/ads/
 .unicast.com/
 .uploadmirrors.com/banner.html
 .upsellit.com/
@@ -3026,6 +3026,7 @@ http://ads.mefeedia.com/
 http://ads.mgnetwork.com/
 http://ads.mmania.com/
 http://ads.nationalgeographic.
+http://ads.netcommunities.com/
 http://ads.ninemsn.com.au/
 http://ads.nzcity.co.nz/
 http://ads.okazii.ro/content/
@@ -3033,6 +3034,7 @@ http://ads.passion.ru/
 http://ads.pleasuregirl.net/
 http://ads.pornhub.com/
 http://ads.program3.com/
+http://ads.raidrush.org/
 http://ads.realslutparty.com/
 http://ads.rediff.com/
 http://ads.redlightcenter.
@@ -3042,8 +3044,6 @@ http://ads.rttnews.com/
 http://ads.rudester.com/
 http://ads.ruralpress.com/
 http://ads.scribefire.com/
-http://ads.netcommunities.com/
-http://ads.raidrush.org/
 http://ads.sexier.com/
 http://ads.sexinyourcity.com/
 http://ads.shoppingads.com/
@@ -3513,6 +3513,7 @@ http://www.funtonia.com/promo/
 http://www.gov-auctions.org/images/banner/banner
 http://www.greattastenopain.com/aff/
 http://www.hardsextube.com/preroll/
+http://www.ibatom.com/
 http://www.jaymancash.com/POTD/
 http://www.lyricsfreak.com/i/overlay.js?
 http://www.macintouch.com/images/amaz_
