.china.com/statistic.js

--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -91,6 +91,7 @@
 .chase.com/js/Reporting.js
 .checkeffect.at/
 .checkstat.nl/
+.china.com/statistic.js
 .clearspring.com/at/
 .clearspring.com/button1.swf
 .clearspring.com/t/
