site: http://www.metrolyrics.com/pokemon-johto-lyrics-pokemon.html'

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: pwsn0HpY1DiEz3s/Jwc1GQ
+# Checksum: mNoq8ALv9Z6rjUbysjuvYw
 # Updated: 11 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3518,6 +3518,7 @@ http://www.jaymancash.com/POTD/
 http://www.lyricsfreak.com/i/overlay.js?
 http://www.macintouch.com/images/amaz_
 http://www.macintouch.com/images/owc_
+http://www.metrolyrics.com/js/min/tonefuse.js
 http://www.nationalpubpoker.com.au/images/banners/
 http://www.nationalpubpoker.com.au/images/frontpage/corporate_ban
 http://www.npplpoker.com.au/images/banners/
