--- a/easylistfanboy/iron/adblock-chn.ini
+++ b/easylistfanboy/iron/adblock-chn.ini
@@ -98,6 +98,7 @@
 .sohu.com/blogcount?
 .sohu.com/click2/
 .scol.com.cn/linkpic/
+.scol.com.cn/images/banner
 .stat.ku6.com/dostatv.do?
 .szbooks.com/hope/baner
 .tianjimedia.
@@ -167,6 +168,7 @@
 /logcount.php?
 /LogFriend/
 /l.yimg.com/mq/i/home/promo/
+/mystat/
 /neiyead.js
 /pvcounter/
 /rm6_stat.do?
