--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: mNoq8ALv9Z6rjUbysjuvYw
+# Checksum: mMdpxpcP5a5pdzI1zaRNTA
 # Updated: 11 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1930,6 +1930,8 @@
 /ero-ads-
 /eroad.php
 /eroadvertorial
+/ero_hosted_
+/erobanner.
 /esel.js
 /eshopoffer.asp
 /etology.
@@ -2135,6 +2137,7 @@
 /layer.php?bid
 /layer/layer.js
 /layout.inc.php?img
+/leftads.
 /leftbanner/
 /lifeshowad/
 /lit.lite.js
@@ -2284,6 +2287,8 @@
 /richOAS.
 /right_ad.
 /rightad.
+/rightads.
+/right_adengage.
 /rightbanner/
 /rotating_banner.php
 /rotatingtextad
