--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: mMdpxpcP5a5pdzI1zaRNTA
+# Checksum: AmGhJroOtw3bObHlzM7z9w
 # Updated: 11 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -912,6 +912,7 @@
 .opinionbar.com/popups/
 .org/ad/
 .org/ads/
+.oneclicktube.com/hover.
 .ospreymedialp.
 .otcash.com/images/
 .overclockers.co.uk/home_banners/
