--- a/easylistfanboy/iron/adblock-esp.ini
+++ b/easylistfanboy/iron/adblock-esp.ini
@@ -25,6 +25,7 @@
 .cb.cl/NewCBCL/images/Banner
 .cb.cl/NewCBCL/images/banner_
 .cb.cl/NewCBCL/images/cb_
+.certifica.com/cert/hit.dll?
 .chacas.com.ar/comercial/
 .cl/ads3/
 .cliccabanner.com/
@@ -112,6 +113,7 @@
 /Bannerctgineses
 /bannerWoo.
 /bannerwoopos
+/bbtstats/
 /dixioforyoursite/
 /ficheiros/banners/
 /find.gl/js.php?
