--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -317,6 +317,7 @@
 .insightexpressai.
 .insightgrit.com/
 .insites.eu/Survey/
+.insights.gravity.com/
 .intelimet.
 .intelli-direct.
 .intelli-tracker.
