--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: AmGhJroOtw3bObHlzM7z9w
-# Updated: 11 Jul 2010
+# Checksum: tH98cauq3l9yhv/neSsBiQ
+# Updated: 13 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -660,6 +660,7 @@
 .ign.com/advertisers/
 .illimitux.net/js/abp.js
 .ilovecheating.com/ads/
+.iloveim.com/cAdv
 .imagesatlantic.
 .imageshack.us/ym.php?
 .imagevenue.com/banner
