--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: tH98cauq3l9yhv/neSsBiQ
+# Checksum: Li6+sByUh8IZZS+bwcLM4Q
 # Updated: 13 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -57,6 +57,7 @@
 -ad-util-
 -ad3.jpg
 -ad_injector/
+-adhelper.
 -adsonar.
 -affiliates/img_
 -banner-ad
