--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -316,8 +316,8 @@
 .innovateads.
 .insightexpressai.
 .insightgrit.com/
-.insites.eu/Survey/
 .insights.gravity.com/
+.insites.eu/Survey/
 .intelimet.
 .intelli-direct.
 .intelli-tracker.
@@ -811,6 +811,7 @@
 /collector/hit?
 /common/transparent-pixel.gif
 /condenet-metric.
+/ContentTrackingCall.aspx?
 /cookie.crumb
 /cookie?affiliate
 /coremetrics/
@@ -1548,6 +1549,7 @@ http://metrixlab
 http://mgsrvr.com/
 http://mixmarket.biz/t.plx
 http://mvtracker.com/
+http://ned.itv.com/
 http://netstat.
 http://nir.theregister.co.uk/
 http://o.addthis.com/
