remove old-dead filter

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Li6+sByUh8IZZS+bwcLM4Q
+# Checksum: ImlgaZSR8J6lWZdu0+coAg
 # Updated: 13 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1544,6 +1544,7 @@
 /adjs.php?
 /adjs/iframe
 /adjs_mod
+/adjuggler
 /adkit/js/
 /adlabel_horz
 /adlayer
@@ -2317,7 +2318,6 @@
 /serveasset.php?
 /server/ads/
 /services/ads/
-/servlets/ad
 /Share/ads/
 /share/ads/
 /shared/ad_
