--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: ImlgaZSR8J6lWZdu0+coAg
+# Checksum: kplsLKPEmcJ6puzVlVdb1w
 # Updated: 13 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -969,6 +969,7 @@
 .prettyincash.com/premade/
 .pricegrabber.com/cb_table.
 .pricegrabber.com/export_feeds.
+.pricegrabber.com/mlink.
 .primaryads.
 .privacyprotector.
 .privatamateure.com/
