--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: kplsLKPEmcJ6puzVlVdb1w
+# Checksum: gtwleBRuaDiauTbRf4uGcQ
 # Updated: 13 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1589,6 +1589,7 @@
 /ads-2.js
 /Ads-banner
 /ads-new.
+/ads_bg.
 /ads.asp?
 /ads.aspx?
 /ads.dll/
