--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: gtwleBRuaDiauTbRf4uGcQ
+# Checksum: 1mxCK5clPLUTIobq/+/B3w
 # Updated: 13 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1039,6 +1039,7 @@
 .showyoursite.
 .siccash.com/
 .simply.com/
+.simplyhired.com/c/job-widget/
 .site.img.4tube.com/
 .siteadvisor.com/images/
 .sixsigmatraffic.
