--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 1mxCK5clPLUTIobq/+/B3w
-# Updated: 13 Jul 2010
+# Checksum: 6KV2rVK/oc0fu1LDhR55mA
+# Updated: 14 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -611,7 +611,6 @@
 .getvids.de/ad
 .ggwcash.
 .ghacks.net/skin-background.
-.giantrealm.com/
 .GIF?BannerId
 .gif?BannerId
 .girlsgonewild.com/maintour.
