--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 6KV2rVK/oc0fu1LDhR55mA
+# Checksum: urC57cNvJjpD0P95Z6aACA
 # Updated: 14 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -594,7 +594,6 @@
 .funklicks.
 .funpic.de/layer.php
 .fusionads.
-.futurenet.com/
 .fwmrm.net/ad/
 .g-cash.biz/banner/
 .g.doubleclick.
@@ -1532,6 +1531,7 @@
 /AdHandler.
 /adhandler/
 /AdHandlers
+/adheader.
 /adhug_jc.
 /adiframe.aspx?
 /adiframe/
