--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: urC57cNvJjpD0P95Z6aACA
+# Checksum: EdGDn7XX06fMA7FPLnriYQ
 # Updated: 14 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2987,6 +2987,7 @@ http://adjax.
 http://adjet.
 http://adlik
 http://adlink.
+http://adlisher.com/
 http://adlog.
 http://adm.fwmrm.net/p/discovery_live/
 http://admanag
