--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: EdGDn7XX06fMA7FPLnriYQ
+# Checksum: Pg6RZdGxjOSUgh5uMvRonQ
 # Updated: 14 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2289,6 +2289,8 @@
 /reklame.asp?
 /reklame/
 /relatedads
+/remove_ads.
+/remove_ads2.
 /RequestAdvertisement.
 /richOAS.
 /right_ad.
